--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+
 /*navbar styling*/
 .max-width {
     max-width: 1300px;
@@ -13,11 +14,16 @@
     margin: auto;
 }
 .navbar {
-    padding: 15px 0;
     position: fixed;
+    padding: 30px 0;
     width: 100%;
-    background: crimson;
     font-family: 'Ubuntu', sans-serif;
+    transition: all 0.5s ease;
+    z-index: 999;
+}
+.navbar.sticky {
+    padding: 15px 0;
+    background: #255862;
 }
 .navbar .max-width {
     display: flex;
@@ -27,15 +33,162 @@
 .navbar .logo a{
     font-size: 35px;
     font-weight: 600;
-    color: #fff;
+    color: #548EFF;
+}
+.navbar .logo a span {
+    color: #C7199F;
+    transition: all 0.5s ease;
+}
+.navbar.sticky .logo a span {
+    color: #548EFF;
 }
 .navbar .menu li {
     list-style: none;
     display: inline-block;
 }
 .navbar .menu li a{
-    color: #fff;
+    display: block;
+    color: #00D5FF;
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
+    transition: color 0.3s ease;
+}
+.navbar .menu li a:hover {
+    color: #C7199F;
+}
+.navbar.sticky .menu li a:hover{
+    color: #fff;
+}
+/*menu btn styling*/
+.menu-btn {
+    color: #fff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
+}
+
+/*home section styling*/
+.home {
+    display: flex;
+    height: 100vh;
+    background: url("../img/banner.jpg") no-repeat center;
+    color: lightseagreen;
+    min-height: 500px;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Ubuntu', sans-serif;
+}
+.home .max-width {
+    width: 100%;
+    display: flex;
+}
+.home .home-content .text-1 {
+    font-size: 27px;
+}
+.home .home-content .text-2 {
+    font-size: 70px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+.home .home-content .text-3 {
+    font-size: 40px;
+    margin: 5px 0;
+}
+.home .home-content .text-3 span {
+    color: lightblue;
+    font-weight: 500;
+}
+.home .home-content a {
+    display: inline-block;
+    background: lightseagreen;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 35px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid lightseagreen;
+    transition: all 0.5s ease;
+}
+.home .home-content a:hover {
+    color: lightseagreen;
+    background: none;
+}
+/*responsive media query start*/
+@media (max-width: 1104px) {
+    .home .max-width {
+        margin-left: 0;
+    }
+}
+@media (max-width: 991px) {
+    .max-width{
+        padding: 0 50px;
+    }
+}
+@media (max-width: 947px) {
+    .menu-btn {
+        display: block;
+        z-index: 999;
+    }
+    .menu-btn i.active:before {
+        content: "\f00d";
+    }
+    .navbar .menu {
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+        padding-top: 80px;
+        transition: all 0.3s ease;
+    }
+    .navbar .menu.active {
+        left: 0;
+    }
+    .navbar .menu li {
+        display: block;
+    }
+    .navbar .menu li a {
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .home-content .text-2 {
+        font-size: 65px;
+    }
+    .home .home-content .text-3 {
+        font-size: 35px;
+    }
+    .home .home-content a {
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+}
+@media (max-width: 690px) {
+    .max-width {
+        padding: 0 23px;
+    }
+    .home .home-content .text-2 {
+        font-size: 60px;
+    }
+    .home .home-content .text-3 {
+        font-size: 32px;
+    }
+    .home .home-content a {
+        font-size: 20px;
+        padding: 8px 20px;
+    }
+    .home .home-content a {
+        font-size: 20px;
+    }
+}
+@media (max-width: 500px) {
+    .home .home-content .text-2 {
+        font-size: 50px;
+    }
+    .home .home-content .text-3 {
+        font-size: 27px;
+    }
 }
