--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@
     color: #548EFF;
 }
 .navbar .logo a span {
-    color: #C7199F;
+    color: #00D5FF;
     transition: all 0.5s ease;
 }
 .navbar.sticky .logo a span {
@@ -114,10 +114,100 @@
     color: lightseagreen;
     background: none;
 }
+
+/*about section styling*/
+section {
+    padding: 100px 0;
+}
+.about {
+    font-family: 'Poppins', sans-serif;
+    background: lightblue;
+}
+.about .title {
+    position: relative;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-size: 40px;
+    font-weight: 500;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+}
+.about .title::before {
+    content: '';
+    position: absolute;
+    width: 180px;
+    height: 3px;
+    background: #111111;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.about .title::after {
+    content: 'who i am';
+    font-size: 20px;
+    color: #548EFF;
+    position: absolute;
+    padding: 5px;
+    background: #fff;
+    bottom: -12px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.about .about-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about .about-content .left {
+    width: 45%;
+}
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+.about .about-content .right {
+    width: 55%;
+}
+.about .about-content .right .text {
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.about .about-content .right .text span {
+    color: #548EFF;
+}
+.about .about-content .right p {
+    text-align: justify;
+}
+.about .about-content .right a {
+    display: inline-block;
+    background: lightseagreen;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 30px;
+    font-weight: 500;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid lightseagreen;
+    transition: all 0.5s ease;
+}
+.about .about-content .right a:hover {
+    background: none;
+    color: lightseagreen;
+}
 /*responsive media query start*/
-@media (max-width: 1104px) {
+@media (max-width: 1300px) {
     .home .max-width {
         margin-left: 0;
+    }
+}
+@media (max-width: 1104px) {
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
     }
 }
 @media (max-width: 991px) {
@@ -164,6 +254,20 @@
     .home .home-content a {
         font-size: 23px;
         padding: 10px 30px;
+    }
+    .max-width {
+        max-width: 800px;
+    }
+    .about .about-content .column {
+        width: 100%;
+    }
+    .about .about-content .left {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right {
+        flex: 100%;
     }
 }
 @media (max-width: 690px) {
