--- a/css/styles.css
+++ b/css/styles.css
@@ -114,16 +114,11 @@
     color: lightseagreen;
     background: none;
 }
-
-/*about section styling*/
+/*similar content styling code*/
 section {
     padding: 100px 0;
 }
-.about {
-    font-family: 'Poppins', sans-serif;
-    background: lightblue;
-}
-.about .title {
+section .title {
     position: relative;
     margin-bottom: 60px;
     padding-bottom: 20px;
@@ -132,7 +127,7 @@ section {
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
 }
-.about .title::before {
+section .title::before {
     content: '';
     position: absolute;
     width: 180px;
@@ -142,8 +137,7 @@ section {
     left: 50%;
     transform: translateX(-50%);
 }
-.about .title::after {
-    content: 'who i am';
+section .title::after {
     font-size: 20px;
     color: #548EFF;
     position: absolute;
@@ -153,7 +147,20 @@ section {
     left: 50%;
     transform: translateX(-50%);
 }
-.about .about-content {
+
+/*about section styling*/
+.about {
+    background: lightblue;
+}
+.about, .services {
+    font-family: 'Poppins', sans-serif;
+}
+.about .title::after {
+    content: 'who i am';
+}
+
+.about .about-content,
+.services .serv-content{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -181,6 +188,7 @@ section {
 }
 .about .about-content .right p {
     text-align: justify;
+    font-weight: 500;
 }
 .about .about-content .right a {
     display: inline-block;
@@ -197,6 +205,46 @@ section {
 .about .about-content .right a:hover {
     background: none;
     color: lightseagreen;
+}
+
+/*services styling section*/
+.services {
+    font-weight: 500;
+    background: #12A8BF;
+}
+.services .title::after {
+    content: 'what i provide';
+}
+.services .serv-content .card {
+    width: calc(33% - 20px);
+    background: #B7C6E9;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+.services .serv-content .card:hover {
+    background: #0C49D7;
+}
+.services .serv-content .card .box {
+    transition: all 0.5s ease;
+}
+.services .serv-content .card:hover .box {
+    transform: scale(1.05);
+}
+.services .serv-content .card i {
+    font-size: 50px;
+    color: blue;
+    transition: color 1s ease-out;
+}
+.services .serv-content .card:hover i {
+    color: #fff;
+}
+.services .serv-content .card .text {
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
 }
 /*responsive media query start*/
 @media (max-width: 1300px) {
@@ -256,7 +304,7 @@ section {
         padding: 10px 30px;
     }
     .max-width {
-        max-width: 800px;
+        max-width: 930px;
     }
     .about .about-content .column {
         width: 100%;
@@ -268,6 +316,10 @@ section {
     }
     .about .about-content .right {
         flex: 100%;
+    }
+    .services .serv-content .card {
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
     }
 }
 @media (max-width: 690px) {
@@ -286,6 +338,9 @@ section {
     }
     .home .home-content a {
         font-size: 20px;
+    }
+    .services .serv-content .card {
+        width: 100%;
     }
 }
 @media (max-width: 500px) {
