--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,17 @@
 section {
     padding: 100px 0;
 }
+.about, .services, .skills {
+    font-family: 'Poppins', sans-serif;
+}
+.about .about-content,
+.services .serv-content,
+.skills .skills-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 section .title {
     position: relative;
     margin-bottom: 60px;
@@ -137,34 +148,23 @@ section .title::before {
     left: 50%;
     transform: translateX(-50%);
 }
+
 section .title::after {
     font-size: 20px;
     color: #548EFF;
     position: absolute;
     padding: 5px;
-    background: #fff;
+    background: #111;
     bottom: -12px;
     left: 50%;
     transform: translateX(-50%);
 }
-
 /*about section styling*/
 .about {
     background: lightblue;
 }
-.about, .services {
-    font-family: 'Poppins', sans-serif;
-}
 .about .title::after {
     content: 'who i am';
-}
-
-.about .about-content,
-.services .serv-content{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
 }
 .about .about-content .left {
     width: 45%;
@@ -246,6 +246,85 @@ section .title::after {
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
+
+/*skills section styling*/
+.skills .title:after {
+    content: 'what i know';
+}
+.skills .skills-content .column {
+    width: calc(50% - 30px);
+}
+.skills .skills-content .left .text {
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.skills .skills-content .left p {
+    text-align: justify;
+}
+.skills .skills-content .left a {
+    display: inline-block;
+    background: lightseagreen;
+    color: #fff;
+    font-size: 18px;
+    padding: 8px 16px;
+    font-weight: 500;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid lightseagreen;
+    transition: all 0.5s ease;
+}
+.skills .skills-content .left a:hover {
+    color: lightseagreen;
+    background: none;
+}
+.skills .skills-content .right .bars {
+    margin-bottom: 15px;
+}
+.skills .skills-content .right .info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+.skills .skills-content .right span {
+    font-weight: 500;
+    font-size: 18px;
+}
+.skills .skills-content .right .line {
+    height: 5px;
+    width: 100%;
+    background: lightgray;
+}
+.skills .skills-content .right .line {
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+.skills .skills-content .right .line::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #255862;
+}
+.skills-content .right .html::before {
+    width: 90%;
+}
+.skills-content .right .css::before {
+    width: 60%;
+}
+.skills-content .right .js::before {
+    width: 70%;
+}
+.skills-content .right .ng::before {
+    width: 30%;
+}
+.skills-content .right .react::before {
+    width: 30%;
+}
 /*responsive media query start*/
 @media (max-width: 1300px) {
     .home .max-width {
@@ -321,6 +400,10 @@ section .title::after {
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
+    .skills .skills-content .column {
+        width: 100%;
+        margin-bottom: 35px;
+    }
 }
 @media (max-width: 690px) {
     .max-width {
@@ -339,7 +422,7 @@ section .title::after {
     .home .home-content a {
         font-size: 20px;
     }
-    .services .serv-content .card {
+    .services .serv-content .card{
         width: 100%;
     }
 }
