--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,15 @@
     box-sizing: border-box;
     text-decoration: none;
 }
-
-/*navbar styling*/
+html {
+    scroll-behavior: smooth;
+}
 .max-width {
     max-width: 1300px;
     padding: 0 80px;
     margin: auto;
 }
+                                                /*navbar styling*/
 .navbar {
     position: fixed;
     padding: 30px 0;
@@ -57,18 +59,41 @@
 .navbar .menu li a:hover {
     color: #C7199F;
 }
-.navbar.sticky .menu li a:hover{
+.navbar.sticky .menu li a:hover {
     color: #fff;
 }
-/*menu btn styling*/
+                                                    /*menu btn styling*/
 .menu-btn {
     color: #fff;
     font-size: 23px;
     cursor: pointer;
     display: none;
 }
+.scroll-up-btn {
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: #111;
+    color: white;
+    right: 30px;
+    bottom: 10px;
+    text-align: center;
+    line-height: 45px;
+    z-index: 9999;
+    font-size: 30px;
+    opacity: 0;
+    pointer-events: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+.scroll-up-btn.show {
+    bottom: 30px;
+    opacity: 0.5;
+    pointer-events: auto;
+}
 
-/*home section styling*/
+                                            /*home section styling*/
 .home {
     display: flex;
     height: 100vh;
@@ -114,16 +139,18 @@
     color: lightseagreen;
     background: none;
 }
-/*similar content styling code*/
+
+                                            /*similar content styling code*/
 section {
     padding: 100px 0;
 }
-.about, .services, .skills, .teams {
+.about, .services, .skills, .teams, .contact, footer {
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content,
 .services .serv-content,
-.skills .skills-content {
+.skills .skills-content,
+.contact .contact-content{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -159,7 +186,8 @@ section .title::after {
     left: 50%;
     transform: translateX(-50%);
 }
-/*about section styling*/
+
+                                            /*about section styling*/
 .about {
     background: lightblue;
 }
@@ -207,7 +235,7 @@ section .title::after {
     color: lightseagreen;
 }
 
-/*services styling section*/
+                                            /*services styling section*/
 .services {
     font-weight: 500;
     background: #12A8BF;
@@ -247,7 +275,7 @@ section .title::after {
     margin: 10px 0 7px 0;
 }
 
-/*skills section styling*/
+                                            /*skills section styling*/
 .skills .title:after {
     content: 'what i know';
 }
@@ -326,7 +354,7 @@ section .title::after {
     width: 30%;
 }
 
-/*teams section styling*/
+                                            /*teams section styling*/
 .teams {
     /*height: 100vh;*/
     background: url("../img/banner2.jpg") no-repeat center;
@@ -384,7 +412,7 @@ section .title::after {
     border-radius: 50%;
     margin: 0 5px;
     transition: all 0.5s ease;
-    border: 5px solid lightseagreen!important;
+    border: 5px solid black!important;
 }
 .owl-dot.active {
     width: 35px;
@@ -394,12 +422,114 @@ section .title::after {
 .owl-dot:hover {
     background: #548EFF!important;
 }
-/*responsive media query start*/
-@media (max-width: 1300px) {
-    .home .max-width {
-        margin-left: 0;
-    }
+
+                                            /*contact section styling*/
+.contact .title::after {
+    content: 'get in touch';
 }
+.contact .contact-content .column {
+    width: calc(50% - 30px);
+}
+.contact .contact-content .text {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.contact .contact-content .left p {
+    text-align: justify;
+}
+.contact .contact-content .left .icons {
+    margin: 10px 0;
+}
+.contact .contact-content .row {
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+.contact .contact-content .row .info {
+    margin-left: 30px;
+}
+.contact .contact-content .row i {
+    font-size: 25px;
+    color: lightseagreen;
+}
+.contact .contact-content .info .head {
+    font-weight: 500;
+}
+.contact .contact-content .info .sub-title {
+    color: #333;
+}
+.contact .right form .fields {
+    display: flex;
+}
+.contact .right form .field,
+.contact .right form .fields .field {
+    height: 45px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.contact .right form .textarea {
+    height: 80px;
+    width: 100%;
+}
+.contact .right form .name {
+    margin-right: 10px;
+}
+.contact .right form .email {
+    margin-left: 10px;
+}
+.contact .right form .field input,
+.contact .right form .textarea textarea{
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgray;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+}
+.contact .right form .textarea textarea {
+    padding-top: 10px;
+    resize: none;
+}
+.contact .right form .button {
+    height: 47px;
+    width: 170px;
+}
+.contact .right form .button button {
+    width: 100%;
+    height: 100%;
+    border: 2px solid lightseagreen;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    background: lightseagreen;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+.contact .right form .button button:hover {
+    color: lightseagreen;
+    background: none;
+}
+
+                                            /*footer section styling*/
+footer {
+    background: lightblue;
+    padding: 20px 23px;
+    color: #111;
+    text-align: center;
+}
+footer span a {
+    color: blue;
+    text-decoration: none;
+}
+footer span a:hover {
+    text-decoration: underline;
+}
+
+                                            /*responsive media query start*/
 @media (max-width: 1104px) {
     .about .about-content .left img{
         height: 350px;
@@ -469,7 +599,8 @@ section .title::after {
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
-    .skills .skills-content .column {
+    .skills .skills-content .column,
+    .contact .contact-content .column{
         width: 100%;
         margin-bottom: 35px;
     }
@@ -486,10 +617,6 @@ section .title::after {
     }
     .home .home-content a {
         font-size: 20px;
-        padding: 8px 20px;
-    }
-    .home .home-content a {
-        font-size: 20px;
     }
     .services .serv-content .card{
         width: 100%;
@@ -501,5 +628,27 @@ section .title::after {
     }
     .home .home-content .text-3 {
         font-size: 27px;
+    }
+    .about .about-content .right .text,
+    .skills .skills-content .left .text{
+        font-size: 19px;
+    }
+    .contact .right form .fields{
+        flex-direction: column;
+    }
+    .contact .right form .name,
+    .contact .right form .email{
+        margin: 0;
+    }
+    .right form .error-box{
+        width: 150px;
+    }
+    .scroll-up-btn{
+        right: 15px;
+        bottom: 15px;
+        height: 38px;
+        width: 35px;
+        font-size: 23px;
+        line-height: 38px;
     }
 }
